fix vertical alignment on ad

--- a/styles.css
+++ b/styles.css
@@ -28,13 +28,15 @@ aside {
   background-color: #D5A6BD;
   width: 20%;
   height: 400px;
-  position: relative;
-  vertical-align: top;
-  text-align: center; }
+  vertical-align: top; }
   aside .ad {
-    position: absolute;
+    position: relative;
     top: 50%;
-    transform: translateY(-50%); }
+    transform: translateY(-50%);
+    text-align: center; }
+    aside .ad p {
+      font-size: 1.1em;
+      line-height: 1.2em; }
     aside .ad img {
       margin-top: 15px; }
 
